--- a/projects/dragdrop/package.json
+++ b/projects/dragdrop/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "dragdrop",
-  "version": "0.0.1",
-  "peerDependencies": {
-    "@angular/common": "^7.0.0",
-    "@angular/core": "^7.0.0"
-  }
+    "name": "lib-dragdrop",
+    "version": "1.1.0",
+    "peerDependencies": {
+        "@angular/common": "^7.0.0",
+        "@angular/core": "^7.0.0"
+    }
 }
