--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~8.2.14",
-        "@angular/common": "~8.2.14",
-        "@angular/compiler": "~8.2.14",
-        "@angular/core": "~8.2.14",
-        "@angular/forms": "~8.2.14",
+        "@angular/animations": "~12.0.5",
+        "@angular/common": "~12.0.5",
+        "@angular/compiler": "~12.0.5",
+        "@angular/core": "~12.0.5",
+        "@angular/forms": "~12.0.5",
         "@angular/http": "~7.2.15",
-        "@angular/platform-browser": "~8.2.14",
-        "@angular/platform-browser-dynamic": "~8.2.14",
-        "@angular/router": "~8.2.14",
+        "@angular/platform-browser": "~12.0.5",
+        "@angular/platform-browser-dynamic": "~12.0.5",
+        "@angular/router": "~12.0.5",
         "core-js": "^3.6.1",
         "rxjs": "~6.5.4",
-        "zone.js": "~0.10.2"
+        "zone.js": "~0.11.4"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.803.21",
         "@angular-devkit/build-ng-packagr": "~0.803.21",
         "@angular/cli": "~8.3.21",
-        "@angular/compiler-cli": "~8.2.14",
-        "@angular/language-service": "~8.2.14",
+        "@angular/compiler-cli": "~12.0.5",
+        "@angular/language-service": "~12.0.5",
         "@types/jasmine": "~3.5.0",
         "@types/jasminewd2": "~2.0.8",
         "@types/node": "~13.1.2",
@@ -50,6 +50,6 @@
         "tsickle": ">=0.37.1",
         "tslib": "^1.10.0",
         "tslint": "~5.20.1",
-        "typescript": "^3.5.3"
+        "typescript": "4.2.4"
     }
 }
