Update Angular CLI to v9

--- a/package.json
+++ b/package.json
@@ -1,55 +1,54 @@
 {
-    "name": "dragdrop-lib",
-    "version": "1.1.2",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
-        "build-lib": "ng build dragdrop --watch",
-        "test-lib": "ng test dragdrop --code-coverage",
-        "doc-lib": "typedoc --out documentation --excludePrivate --name DragDrop ./projects/dragdrop/src/lib"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "~12.0.5",
-        "@angular/common": "~12.0.5",
-        "@angular/compiler": "~12.0.5",
-        "@angular/core": "~12.0.5",
-        "@angular/forms": "~12.0.5",
-        "@angular/http": "~7.2.15",
-        "@angular/platform-browser": "~12.0.5",
-        "@angular/platform-browser-dynamic": "~12.0.5",
-        "@angular/router": "~12.0.5",
-        "core-js": "^3.6.1",
-        "rxjs": "~6.5.4",
-        "zone.js": "~0.11.4"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "~0.803.21",
-        "@angular-devkit/build-ng-packagr": "~0.803.21",
-        "@angular/cli": "~8.3.21",
-        "@angular/compiler-cli": "~12.0.5",
-        "@angular/language-service": "~12.0.5",
-        "@types/jasmine": "~3.5.0",
-        "@types/jasminewd2": "~2.0.8",
-        "@types/node": "~13.1.2",
-        "codelyzer": "~5.2.1",
-        "jasmine-core": "~3.5.0",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~4.4.1",
-        "karma-chrome-launcher": "~3.1.0",
-        "karma-coverage-istanbul-reporter": "~2.1.1",
-        "karma-jasmine": "~2.0.1",
-        "karma-jasmine-html-reporter": "^1.5.1",
-        "ng-packagr": "^5.7.1",
-        "protractor": "~5.4.2",
-        "ts-node": "~8.5.4",
-        "tsickle": ">=0.37.1",
-        "tslib": "^1.10.0",
-        "tslint": "~5.20.1",
-        "typescript": "4.2.4"
-    }
+  "name": "dragdrop-lib",
+  "version": "1.1.2",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "build-lib": "ng build dragdrop --watch",
+    "test-lib": "ng test dragdrop --code-coverage",
+    "doc-lib": "typedoc --out documentation --excludePrivate --name DragDrop ./projects/dragdrop/src/lib"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~12.0.5",
+    "@angular/common": "~12.0.5",
+    "@angular/compiler": "~12.0.5",
+    "@angular/core": "~12.0.5",
+    "@angular/forms": "~12.0.5",
+    "@angular/http": "~7.2.15",
+    "@angular/platform-browser": "~12.0.5",
+    "@angular/platform-browser-dynamic": "~12.0.5",
+    "@angular/router": "~12.0.5",
+    "core-js": "^3.6.1",
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular-devkit/build-ng-packagr": "~0.901.15",
+    "@angular/cli": "~9.1.15",
+    "@angular/compiler-cli": "~12.0.5",
+    "@angular/language-service": "~12.0.5",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.1",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.5.1",
+    "ng-packagr": "^9.0.0",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.5.4",
+    "tslint": "~5.20.1",
+    "typescript": "4.2.4"
+  }
 }
