--- a/package.json
+++ b/package.json
@@ -1,53 +1,57 @@
 {
-  "name": "dragdrop-lib",
-  "version": "1.1.2",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "build-lib": "ng build dragdrop --watch",
-    "test-lib": "ng test dragdrop --code-coverage",
-    "doc-lib": "typedoc --out documentation --excludePrivate --name DragDrop ./projects/dragdrop/src/lib"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~12.0.5",
-    "@angular/common": "~12.0.5",
-    "@angular/compiler": "~12.0.5",
-    "@angular/core": "~12.0.5",
-    "@angular/forms": "~12.0.5",
-    "@angular/http": "~7.2.15",
-    "@angular/platform-browser": "~12.0.5",
-    "@angular/platform-browser-dynamic": "~12.0.5",
-    "@angular/router": "~12.0.5",
-    "core-js": "^3.6.1",
-    "rxjs": "~6.5.4",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~12.0.5",
-    "@angular/cli": "~12.0.5",
-    "@angular/compiler-cli": "~12.0.5",
-    "@angular/language-service": "~12.0.5",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^12.0.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.5.4",
-    "tslint": "~6.1.0",
-    "typescript": "4.2.4"
-  }
+    "name": "dragdrop-lib",
+    "version": "1.1.2",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "build-lib": "ng build dragdrop",
+        "test-lib": "ng test dragdrop --code-coverage",
+        "doc-lib": "typedoc --out documentation --excludePrivate --name DragDrop ./projects/dragdrop/src/lib"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~12.0.5",
+        "@angular/common": "~12.0.5",
+        "@angular/compiler": "~12.0.5",
+        "@angular/core": "~12.0.5",
+        "@angular/forms": "~12.0.5",
+        "@angular/http": "~7.2.16",
+        "@angular/platform-browser": "~12.0.5",
+        "@angular/platform-browser-dynamic": "~12.0.5",
+        "@angular/router": "~12.0.5",
+        "core-js": "^3.15.0",
+        "diff": "^5.0.0",
+        "karma-coverage": "^2.0.3",
+        "karma-mocha": "^2.0.1",
+        "karma-mocha-reporter": "^2.2.5",
+        "mocha": "^9.0.1",
+        "rxjs": "~7.1.0",
+        "tslib": "^2.3.0",
+        "zone.js": "~0.11.4"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~12.0.5",
+        "@angular/cli": "~12.0.5",
+        "@angular/compiler-cli": "~12.0.5",
+        "@angular/language-service": "~12.0.5",
+        "@types/jasmine": "~3.7.7",
+        "@types/jasminewd2": "~2.0.9",
+        "@types/node": "^15.12.4",
+        "codelyzer": "^6.0.2",
+        "jasmine-core": "~3.7.1",
+        "jasmine-spec-reporter": "~7.0.0",
+        "karma": "~6.3.4",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-jasmine": "~4.0.1",
+        "karma-jasmine-html-reporter": "^1.6.0",
+        "ng-packagr": "^12.0.6",
+        "protractor": "~7.0.0",
+        "ts-node": "~10.0.0",
+        "tslint": "~6.1.3",
+        "typescript": "4.2.4"
+    }
 }
