--- a/projects/dragdrop/tsconfig.lib.json
+++ b/projects/dragdrop/tsconfig.lib.json
@@ -19,7 +19,7 @@
     },
     "angularCompilerOptions": {
         "enableIvy": true,
-        "compileMode": "partial",
+        "compilationMode": "partial",
         "skipTemplateCodegen": true,
         "strictMetadataEmit": true,
         "fullTemplateTypeCheck": true,
