--- a/projects/dragdrop/tsconfig.lib.prod.json
+++ b/projects/dragdrop/tsconfig.lib.prod.json
@@ -5,6 +5,6 @@
     },
     "angularCompilerOptions": {
         "enableIvy": true,
-        "compileMode": "partial"
+        "compilationMode": "partial"
     }
 }
